Bug 21802: Align fieldset with accordion headers when editing notice's template
Test plan:
Regenerate the css using `yarn css`
Edit a notice's template and confirm that the fieldsets are aligned with
the accordion headers

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -1006,7 +1006,7 @@ fieldset {
             border-top-right-radius: 0;
             margin: 0;
             padding: 0;
-            width: auto;
+            width: 100%;
 
             table {
                 margin: 0;
